--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planet Visualization</title>
+    <style>
+        /* Ensure the canvas is visible */
+        body {
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #000; /* Black background */
+        }
+    </style>
 </head>
 <body>
-    <canvas id="gameCanvas"></canvas>
-    <script src="visualization.js"></script>
+    <canvas id="gameCanvas" width="750" height="500"></canvas>
+    <script src="planet_type0.js"></script>
+    <script src="planet_type1.js"></script>
+    <script src="planet_type2.js"></script>
+    <script src="planet_type3.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
