--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 </head>
 <body>
     <canvas id="gameCanvas" width="750" height="500"></canvas>
-    <script src="planet_type0.js"></script>
-    <script src="planet_type1.js"></script>
-    <script src="planet_type2.js"></script>
-    <script src="planet_type3.js"></script>
+    <script src="planets/planet_type0.js"></script>
+    <script src="planets/planet_type1.js"></script>
+    <script src="planets/planet_type2.js"></script>
+    <script src="planets/planet_type3.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
