--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planet Visualization</title>
     <style>
-        /* Ensure the canvas is visible */
         body {
             margin: 0;
             display: flex;
@@ -13,6 +12,9 @@
             align-items: center;
             height: 100vh;
             background-color: #000; /* Black background */
+        }
+        canvas {
+            border: 2px solid white; /* White border around canvas */
         }
     </style>
 </head>
