--- a/index.html
+++ b/index.html
@@ -3,28 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planet Visualization</title>
+    <title>2D Space Dodger Game</title>
     <style>
-        body { 
-            margin: 0; 
-            display: flex; 
-            justify-content: center; 
-            align-items: center; 
-            height: 100vh; 
-            background-color: #000; 
-            color: #fff; 
+        body {
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: black;
+            color: white;
+            font-family: Arial, sans-serif;
         }
-        canvas { 
-            border: 2px solid white; 
+        canvas {
+            border: 2px solid white;
         }
     </style>
 </head>
 <body>
     <canvas id="gameCanvas" width="750" height="500"></canvas>
-    <script src="planets/planet_type0.js"></script>
-    <script src="planets/planet_type1.js"></script>
-    <script src="planets/planet_type2.js"></script>
-    <script src="planets/planet_type3.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
