--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2D Space Dodger Game</title>
+    <title>Space Dodger Game</title>
     <style>
         body {
             margin: 0;
@@ -11,17 +11,19 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: black;
-            color: white;
-            font-family: Arial, sans-serif;
+            background-color: #000;
         }
         canvas {
-            border: 2px solid white;
+            border: 1px solid #fff;
         }
     </style>
 </head>
 <body>
     <canvas id="gameCanvas" width="750" height="500"></canvas>
+    <script src="planets/planet_type0.js"></script>
+    <script src="planets/planet_type1.js"></script>
+    <script src="planets/planet_type2.js"></script>
+    <script src="planets/planet_type3.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
